# EchoNull-GAD

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PATCH_NOTES_v4.txt  PATCH_NOTES_v7.txt  README.md  dd_shadow.py  echonull.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt
.github/workflows/: blank.yml  ci.yml  release.yml  test-scaling-low.yml  test-scaling.yml
benchmarks/: baselines_pyg.py  perf_test.py  public_benchmark.py
docs/: BASELINES.md  BENCHMARK.md  GRAPH_IO.md  NULL_TRACE.md  SCALING.md  SWEEP_PARAMS.md  VIZ.md
results/: README.md
tests/: test_orchestrator_artifacts.py  test_score_monotonic.py  test_smoke.py
