[project]
name = "echonull"
version = "0.2.0"
description = "EchoNull - CI-native graph and null-trace anomaly detection via massive sweeps"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "EchoNull" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "networkx>=3.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
ml = ["torch>=2.0"]
scale = ["dask[distributed]>=2024.1.0"]
perf = ["memory_profiler>=0.61"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

pyg = [
  "torch>=2.0",
  "torch_geometric>=2.0",
]
baselines = [
  "torch>=2.0",
  "torch_geometric>=2.0",
]
[project.scripts]
echonull = "echonull:main"

[tool.setuptools]
py-modules = ["echonull"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
